Add gunicorn to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.2.1
 colorama==0.4.6
 Deprecated==1.2.18
 Flask==3.1.2
+gunicorn==23.0.0
 img2pdf==0.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
