--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 services:
   - type: web
-    name: your-app-name
-    env: debian
-    region: oregon  # or the region you prefer
+    name: my-flask-app
+    env: python
     buildCommand: |
-      apt-get update && apt-get install -y poppler-utils tesseract-ocr libgl1-mesa-glx libglib2.0-0
+      apt-get update
+      apt-get install -y poppler-utils tesseract-ocr
       pip install -r requirements.txt
     startCommand: python app.py
-    plan: free  # or standard as needed
+    envVars:
+      - key: PORT
+        value: "10000"
