--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: my-flask-app
+    name: pdf-ocr-app
     env: python
     buildCommand: |
       apt-get update
-      apt-get install -y poppler-utils tesseract-ocr
+      apt-get install -y poppler-utils tesseract-ocr tesseract-ocr-eng tesseract-ocr-tel
       pip install -r requirements.txt
     startCommand: python app.py
     envVars:
