--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,8 @@
 services:
   - type: web
-    name: pdf-ocr-app
+    name: your-app-name
     env: python
     buildCommand: |
-      apt-get update
-      apt-get install -y poppler-utils tesseract-ocr tesseract-ocr-eng tesseract-ocr-tel
+      apt-get update && apt-get install -y tesseract-ocr tesseract-ocr-eng tesseract-ocr-tel poppler-utils
       pip install -r requirements.txt
     startCommand: python app.py
-    envVars:
-      - key: PORT
-        value: "10000"
