--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: your-app-name
+    name: sort-0fx4
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
